--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Insider Dev Tour</title>
-
+  <link rel="manifest" href="/manifest.json">
+  
   <style>
     html {
       height: 100%;
@@ -33,6 +34,14 @@
 </style>
 </head>
 <body>
+    <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+
+
+    <mgt-mock-provider></mgt-mock-provider>
+    
+    <mgt-login></mgt-login>
+    
+    <mgt-agenda group-by-day></mgt-agenda>
 
 <p> Welcome to the Insider Dev Tour PWA</p>
 </body>
