--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,25 @@
   <meta name="viewport" content="width=device-width">
   <title>Insider Dev Tour</title>
   <link rel="manifest" href="/manifest.json">
-  
+<script>
+
+// Check compatibility for the browser we're running this in
+if ("serviceWorker" in navigator) {
+  if (navigator.serviceWorker.controller) {
+    console.log("[PWA Builder] active service worker found, no need to register");
+  } else {
+    // Register the service worker
+    navigator.serviceWorker
+      .register("pwabuilder-sw.js", {
+        scope: "./"
+      })
+      .then(function (reg) {
+        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+      });
+  }
+}
+
+</script>
   <style>
     html {
       height: 100%;
