--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Insider Dev Tour</title>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 <script>
 
 // Check compatibility for the browser we're running this in
