--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,13 @@ if ("serviceWorker" in navigator) {
 </style>
 </head>
 <body>
- 
+    <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+
+    <mgt-mock-provider></mgt-mock-provider>
+    
+    <mgt-login></mgt-login>
+    
+    <mgt-agenda group-by-day></mgt-agenda>
 
 <p> Welcome to the Insider Dev Tour PWA</p>
 </body>
