--- a/index3.html
+++ b/index3.html
@@ -36,7 +36,7 @@ if ("serviceWorker" in navigator) {
       background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      /*justify-content: center;*/
       height: 100%;
       align-content: center;
       align-items: center;
